# Gohaskgo

./: .gitignore  AsciiBoardParser.hs  ConsolePlay.hs  GoModel.hs  GoTypes.hs  Playout.hs  PlayoutHeuristics.hs  PlayoutTest.hs  PositionAnalysis.hs  UCT.hs  UCTTest.hs  Utils.hs  Zobrist.hs  console_play.hs  gohaskgo.cabal  gomodel.hs  playout.hs  playoutheuristics.hs  simplego.hs  utils.hs
src/: ConsolePlay.hs  PlayoutTest.hs  UCTTest.hs
src/Gohaskgo/Model/: Base.hs  Chain.hs  Gameplay.hs  Point.hs  Position.hs  Zobrist.hs
src/Gohaskgo/Play/: UCT.hs
src/Gohaskgo/Playout/: Base.hs  Heuristics.hs  PositionAnalysis.hs
src/Gohaskgo/Utilities/: AsciiBoardParser.hs  Bit.hs  General.hs  PointSet.hs
test/: test1  test2  test3
test_data/: midway_nine  obvious  test2  test5  vs_cmg_dec_10
