name:           gohaskgo
version:        0.1
synopsis:       Colin Gavin
author:         Colin Gavin <colingavin@lclark.edu>
build-type:     Simple
cabal-version: >= 1.2

executable uct_test
    main-is:            UCTTest.hs
    hs-source-dirs:     src
    build-depends:      base, mtl, array, containers, vector, parsec, rvar, random-fu, mwc-random, random-source, rosezipper, bitvec
    other-modules:      Gohaskgo.Utilities.AsciiBoardParser, 
                        Gohaskgo.Utilities.General,
                        Gohaskgo.Utilities.PointSet,
                        Gohaskgo.Playout.Base,
                        Gohaskgo.Playout.Heuristics,
                        Gohaskgo.Playout.PositionAnalysis,
                        Gohaskgo.Model.Base,
                        Gohaskgo.Model.Chain,
                        Gohaskgo.Model.Gameplay,
                        Gohaskgo.Model.Point,
                        Gohaskgo.Model.Position,
                        Gohaskgo.Model.Zobrist
    ghc-prof-options:   -auto-all
